@@ -1,4 +1,5 @@
 0.03
+ - Change reset to default which returns [].
 
 0.02 2021-06-20T16:45:19+02:00
  - Fix abstract.
